--- a/Pages/Project3/scss/main.scss
+++ b/Pages/Project3/scss/main.scss
@@ -44,6 +44,7 @@
       .title {      
          font-size: 100px;
          background: -webkit-linear-gradient(#eee, blue);
+         text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -76,7 +77,61 @@
  
   .main {
       grid-area: main;
-      background-color: #1e2f2f;
+      background-color: #f4f4f4;
+      background-color: lightgrey;
+  }
+
+  .main-wrapper {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      height: 100%;
+      grid-gap: 15px;
+      margin: 20px;
+      div {
+        border: 1px solid black;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        position: relative;
+        background-color: #5b6467;
+        background-color: #fffffc;
+        background-color: #f6f6f6;
+        background-image: linear-gradient(315deg, #f6f6f6 0%, #e9e9e9 74%);
+        transition: 0.1s;
+      
+        &:hover {
+            transform:scale(1.1,1.1);
+            border: 2px solid black;
+        }
+      }
+  }
+
+
+
+  .el-1 {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      border: 1px solid black;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      span {
+          font-size: 30px;
+          color: #669999;
+      }
+      a {
+          text-decoration: none;
+          color: #cc3300;
+          &:hover {
+              color: lighten(red, 20);
+          }
+      }
   }
 
   .sidebar {
